# roboy_dynamics

./: CMakeLists.txt  package.xml
include/roboy_dynamics/: PaBiRoboy_inverse_kinematics.hpp
matlab/: ChristophBessler.slx  HOWTO.txt  init.m
matlab/3DOF_library/: m3dof_dynamics_sfun.m  m3dof_fkin.m  m3dof_forward_kinematics_sfun.m  m3dof_jacobian.m  m3dof_jacobian_sfun.m  m3dof_library.mdl
matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  s58yL7479OtTYgevQIc3qbG.l  s58yL7479OtTYgevQIc3qbG.mat  sjBYax7lBQJdr2AVYUHX1zD.l  sjBYax7lBQJdr2AVYUHX1zD.mat  stA8mtuG7eXslozDP4AYsGB.l  stA8mtuG7eXslozDP4AYsGB.mat  subq2iK4Z6uBPOjOHrehtkG.l  subq2iK4Z6uBPOjOHrehtkG.mat
matlab/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s58yL7479OtTYgevQIc3qbG.mat  sjBYax7lBQJdr2AVYUHX1zD.mat  stA8mtuG7eXslozDP4AYsGB.mat  subq2iK4Z6uBPOjOHrehtkG.mat
matlab/slprj/_sfprj/precompile/: 3DkGfTmsHPlbfFsjakhjpF.mat  (+7 more)
python/: PaBiRoboy_dynamics_derivation.py  PaBiRoboy_dynamics_simulation.py
python/pydy-resources/: 2017-07-04_23-06-17_scene_desc.json  2017-07-04_23-06-17_simulation_data.json  2017-07-04_23-10-21_scene_desc.json  2017-07-04_23-10-21_simulation_data.json  2017-07-04_23-17-09_scene_desc.json  2017-07-04_23-17-09_simulation_data.json  2017-07-04_23-18-58_scene_desc.json  2017-07-04_23-18-58_simulation_data.json  2017-07-04_23-21-19_scene_desc.json  2017-07-04_23-21-19_simulation_data.json  2017-07-04_23-23-03_scene_desc.json  2017-07-04_23-23-03_simulation_data.json  2017-07-04_23-31-08_scene_desc.json  2017-07-04_23-31-08_simulation_data.json
python/pydy-resources/pydy-resources/: 2017-07-04_23-31-49_scene_desc.json  2017-07-04_23-31-49_simulation_data.json
src/: PaBiRoboy_inverse_kinematics.cpp
(+2 files in other folders)
